# project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
client/: index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.tsx  index.css
client/src/api/: auth.api.ts  axios.ts  chat.api.ts  message.api.ts  notification.api.ts  user.api.ts
client/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
client/src/components/chat/: ChatHeader.tsx  ChatItem.tsx  ChatList.tsx  ChatView.tsx  CreateGroupModal.tsx  MessageBubble.tsx  MessageInput.tsx  SearchModal.tsx
client/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
client/src/components/notifications/: NotificationBell.tsx  NotificationList.tsx
client/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  Spinner.tsx
client/src/hooks/: useAuth.ts  useChat.ts  useSocket.ts
client/src/pages/: LoginPage.tsx  MainPage.tsx  ProfilePage.tsx  RegisterPage.tsx
client/src/socket/: socket.ts
client/src/store/: authStore.ts  chatStore.ts  notificationStore.ts
client/src/types/: index.ts
client/src/utils/: constants.ts  format.ts
docs/: API.md
server/: .env.example  package-lock.json  package.json
server/prisma/: schema.prisma  seed.ts
server/src/: app.ts  index.ts
server/src/config/: database.ts  jwt.ts
server/src/controllers/: auth.controller.ts  chat.controller.ts  message.controller.ts  notification.controller.ts  user.controller.ts
server/src/middleware/: auth.ts  errorHandler.ts  upload.ts
server/src/routes/: auth.routes.ts  chat.routes.ts  index.ts  message.routes.ts  notification.routes.ts  user.routes.ts
server/src/services/: auth.service.ts  chat.service.ts  message.service.ts  notification.service.ts  user.service.ts
server/src/socket/: index.ts
server/src/types/: index.ts
server/src/utils/: jwt.ts  password.ts  storage.ts
src/: ImageProcessor.cpp  ImageProcessor.h  Pipeline.cpp  Pipeline.h  ShaderManager.cpp  ShaderManager.h  UI.cpp  UI.h  main.cpp
